[package]
name = "sockudo-workspace-hack"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []

### BEGIN HAKARI SECTION
[dependencies]
aws-credential-types = { version = "1", default-features = false, features = ["test-util"] }
aws-runtime = { version = "1", default-features = false, features = ["event-stream"] }
aws-sigv4 = { version = "1", features = ["http0-compat", "sign-eventstream"] }
aws-smithy-async = { version = "1", default-features = false, features = ["rt-tokio"] }
aws-smithy-http = { version = "0.62", default-features = false, features = ["event-stream"] }
aws-smithy-runtime = { version = "1", default-features = false, features = ["client", "default-https-client", "rt-tokio", "tls-rustls"] }
aws-smithy-runtime-api = { version = "1", features = ["client", "http-02x", "http-auth", "test-util"] }
aws-smithy-types = { version = "1", default-features = false, features = ["byte-stream-poll-next", "http-body-0-4-x", "http-body-1-x", "rt-tokio", "test-util"] }
axum = { version = "0.8", features = ["ws"] }
base64 = { version = "0.22" }
bitflags = { version = "2", default-features = false, features = ["serde"] }
byteorder = { version = "1" }
bytes = { version = "1", features = ["serde"] }
cc = { version = "1", default-features = false, features = ["parallel"] }
chrono = { version = "0.4" }
crossbeam-utils = { version = "0.8" }
deranged = { version = "0.5", features = ["powerfmt", "serde"] }
digest = { version = "0.10", features = ["mac", "oid", "std"] }
either = { version = "1", features = ["serde", "use_std"] }
fastrand = { version = "2" }
form_urlencoded = { version = "1" }
futures-channel = { version = "0.3", features = ["sink"] }
futures-core = { version = "0.3" }
futures-io = { version = "0.3" }
futures-sink = { version = "0.3" }
futures-task = { version = "0.3", default-features = false, features = ["std"] }
futures-util = { version = "0.3", features = ["channel", "io", "sink"] }
getrandom-468e82937335b1c9 = { package = "getrandom", version = "0.3", default-features = false, features = ["std"] }
getrandom-6f8ce4dd05d13bba = { package = "getrandom", version = "0.2", default-features = false, features = ["std"] }
hmac = { version = "0.12", default-features = false, features = ["reset"] }
hyper = { version = "1", features = ["client", "http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["client-legacy", "client-proxy", "server-auto", "service"] }
lazy_static = { version = "1", default-features = false, features = ["spin_no_std"] }
log = { version = "0.4", default-features = false, features = ["std"] }
memchr = { version = "2" }
moka = { version = "0.12", features = ["future", "sync"] }
num-integer = { version = "0.1", features = ["i128"] }
num-traits = { version = "0.2", features = ["i128", "libm"] }
percent-encoding = { version = "2" }
rand = { version = "0.8" }
regex = { version = "1" }
regex-automata = { version = "0.4", default-features = false, features = ["dfa-build", "dfa-onepass", "hybrid", "meta", "nfa-backtrack", "perf-inline", "perf-literal", "std", "unicode"] }
regex-syntax = { version = "0.8" }
rustls = { version = "0.23", features = ["ring"] }
rustls-webpki = { version = "0.103", default-features = false, features = ["aws-lc-rs", "ring", "std"] }
serde = { version = "1", features = ["alloc", "derive", "rc"] }
serde_core = { version = "1", features = ["alloc", "rc"] }
serde_json = { version = "1", features = ["raw_value"] }
sha1 = { version = "0.10" }
signature = { version = "2", default-features = false, features = ["digest", "rand_core", "std"] }
smallvec = { version = "1", default-features = false, features = ["const_new", "serde"] }
sqlx = { version = "0.8", features = ["mysql", "postgres", "runtime-tokio-rustls", "tls-rustls"] }
sqlx-mysql = { version = "0.8", default-features = false, features = ["any", "json", "migrate", "offline"] }
sqlx-postgres = { version = "0.8", default-features = false, features = ["any", "json", "migrate", "offline"] }
stable_deref_trait = { version = "1" }
sync_wrapper = { version = "1", default-features = false, features = ["futures"] }
time = { version = "0.3", features = ["serde-well-known"] }
tokio = { version = "1", features = ["full", "test-util", "tracing"] }
tokio-rustls = { version = "0.26", features = ["ring"] }
tokio-stream = { version = "0.1", features = ["fs"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
tower = { version = "0.5", default-features = false, features = ["log", "make", "util"] }
tracing = { version = "0.1", features = ["log"] }
tracing-core = { version = "0.1" }
typenum = { version = "1", default-features = false, features = ["const-generics"] }
uuid = { version = "1", features = ["fast-rng", "macro-diagnostics", "v4"] }
yoke = { version = "0.8", features = ["derive"] }
zerocopy = { version = "0.8", default-features = false, features = ["derive", "simd"] }
zerofrom = { version = "0.1", default-features = false, features = ["alloc", "derive"] }

[build-dependencies]
base64 = { version = "0.22" }
bitflags = { version = "2", default-features = false, features = ["serde"] }
byteorder = { version = "1" }
bytes = { version = "1", features = ["serde"] }
cc = { version = "1", default-features = false, features = ["parallel"] }
crossbeam-utils = { version = "0.8" }
digest = { version = "0.10", features = ["mac", "oid", "std"] }
either = { version = "1", features = ["serde", "use_std"] }
form_urlencoded = { version = "1" }
futures-channel = { version = "0.3", features = ["sink"] }
futures-core = { version = "0.3" }
futures-io = { version = "0.3" }
futures-sink = { version = "0.3" }
futures-task = { version = "0.3", default-features = false, features = ["std"] }
futures-util = { version = "0.3", features = ["channel", "io", "sink"] }
getrandom-6f8ce4dd05d13bba = { package = "getrandom", version = "0.2", default-features = false, features = ["std"] }
hmac = { version = "0.12", default-features = false, features = ["reset"] }
lazy_static = { version = "1", default-features = false, features = ["spin_no_std"] }
log = { version = "0.4", default-features = false, features = ["std"] }
memchr = { version = "2" }
num-integer = { version = "0.1", features = ["i128"] }
num-traits = { version = "0.2", features = ["i128", "libm"] }
percent-encoding = { version = "2" }
proc-macro2 = { version = "1", features = ["span-locations"] }
rand = { version = "0.8" }
rustls = { version = "0.23", features = ["ring"] }
rustls-webpki = { version = "0.103", default-features = false, features = ["aws-lc-rs", "ring", "std"] }
serde = { version = "1", features = ["alloc", "derive", "rc"] }
serde_core = { version = "1", features = ["alloc", "rc"] }
serde_json = { version = "1", features = ["raw_value"] }
sha1 = { version = "0.10" }
signature = { version = "2", default-features = false, features = ["digest", "rand_core", "std"] }
smallvec = { version = "1", default-features = false, features = ["const_new", "serde"] }
sqlx-macros = { version = "0.8", features = ["_rt-tokio", "_tls-rustls-ring-webpki", "derive", "json", "macros", "migrate", "mysql", "postgres"] }
sqlx-macros-core = { version = "0.8", features = ["_rt-tokio", "_tls-rustls-ring-webpki", "derive", "json", "macros", "migrate", "mysql", "postgres"] }
sqlx-mysql = { version = "0.8", default-features = false, features = ["any", "json", "migrate", "offline"] }
sqlx-postgres = { version = "0.8", default-features = false, features = ["any", "json", "migrate", "offline"] }
stable_deref_trait = { version = "1" }
syn = { version = "2", features = ["extra-traits", "fold", "full", "visit", "visit-mut"] }
tokio = { version = "1", features = ["full", "test-util", "tracing"] }
tokio-stream = { version = "0.1", features = ["fs"] }
tracing = { version = "0.1", features = ["log"] }
tracing-core = { version = "0.1" }
typenum = { version = "1", default-features = false, features = ["const-generics"] }
yoke = { version = "0.8", features = ["derive"] }
zerocopy = { version = "0.8", default-features = false, features = ["derive", "simd"] }
zerofrom = { version = "0.1", default-features = false, features = ["alloc", "derive"] }

### END HAKARI SECTION
